--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </details>
 
         <details>
-            <summary>My Design Philiosphy</summary>
+            <summary>My Design Philosphy</summary>
             <div class="faq__content">
                 <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
                     voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
