--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="summery of webpage">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!--<script src="https://unpkg.com/tachyonjs@1.0.1/tachyon.min.js" integrity="sha384-YzRhaEvO+tu7clAuAStGkSR0bVr2+IIq1gXxi28k2Wj0gGAdPOuruYnTSFOXLv0I" type="module" crossorigin defer></script>-->
+    <script src="https://unpkg.com/tachyonjs@1.0.1/tachyon.min.js" integrity="sha384-YzRhaEvO+tu7clAuAStGkSR0bVr2+IIq1gXxi28k2Wj0gGAdPOuruYnTSFOXLv0I" type="module" crossorigin defer></script>
 </head>
 
 <body data-tachyon-same-origin>
@@ -99,7 +99,7 @@
         </details>
 
         <details>
-            <summary>On Being Queer</summary>
+            <summary>On </summary>
             <div class="faq__content">
                 <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
                     voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
@@ -129,7 +129,7 @@
             </ul>
         </nav>
         <p>&copy;&ensp;Ava Rowell</p>
-        <p>&hearts;&ensp;designed to be lightweight and cookie free</p>
+        <p>designed to be lightweight and cookie free &hearts;</p>
     </footer>
 
 
