--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head title="Ava Rowell">
     <title aria-label="ay vah rahwl">The Graphic Design portfolio site of Ava Rowell</title>
-        <meta charset="UTF-8">
-<meta name="author" content="Ava Rowell">
-<meta name="keyword" content="HTML, Meta element, Head element">
-<meta name="description" content="summery of webpage">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="author" content="Ava Rowell">
+    <meta name="keyword" content="HTML, Meta element, Head element">
+    <meta name="description" content="summery of webpage">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/tachyonjs@1.0.1/tachyon.min.js" integrity="sha384-YzRhaEvO+tu7clAuAStGkSR0bVr2+IIq1gXxi28k2Wj0gGAdPOuruYnTSFOXLv0I" type="module" crossorigin defer></script>
+    <script src="https://unpkg.com/tachyonjs@1.0.1/tachyon.min.js"
+        integrity="sha384-YzRhaEvO+tu7clAuAStGkSR0bVr2+IIq1gXxi28k2Wj0gGAdPOuruYnTSFOXLv0I" type="module" crossorigin
+        defer></script>
 </head>
 
 <body data-tachyon-same-origin>
@@ -36,84 +38,69 @@
 
         <details open>
             <summary>The Who</summary>
-            <div class="faq__content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor suscipit, iure tenetur eveniet, vero
-                    tempore delectus? Perferendis, quisquam ullam consequuntur?</p>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor suscipit, iure tenetur eveniet, vero
+                tempore delectus? Perferendis, quisquam ullam consequuntur?</p>
         </details>
 
         <details>
             <summary>The Where</summary>
-            <div class="faq__content">
-                <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                    illo.</p>
-            </div>
+            <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
+                voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                illo.</p>
         </details>
 
         <details>
             <summary>My Design Philosophy</summary>
-            <div class="faq__content">
-                <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                    illo.</p>
-            </div>
+            <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
+                voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                illo.</p>
         </details>
 
         <details>
             <summary>Qualifications & Training</summary>
-            <div class="faq__content">
-                    <section>
-                    <p>MA (2009–2010)</p>
-                    <p>With Distinction</p>
-                    <p>Design: Multimedia & Graphics</p>
-                </section>
-                <section>
-                    <p>BA (Hons) Degree (2006–2009)</p>
-                    <p>First Class Honours</p>
-                    <p>Design: Multimedia & Graphics</p>
-                </section>
-                <section>
-                    <p>Social Media Marketing and Campaigning (2021)</p>
-                    <p>University of Leeds and Institute of Coding</p>
-                </section>
-                
+            <section>
+                <p>MA (2009–2010)</p>
+                <p>With Distinction</p>
+                <p>Design: Multimedia & Graphics</p>
+            </section>
+            <section>
+                <p>BA (Hons) Degree (2006–2009)</p>
+                <p>First Class Honours</p>
+                <p>Design: Multimedia & Graphics</p>
+            </section>
+            <section>
+                <p>Social Media Marketing and Campaigning (2021)</p>
+                <p>University of Leeds and Institute of Coding</p>
+            </section>
+
         </details>
 
         <details>
             <summary>Activism & Charity</summary>
-            <div class="faq__content">
-                <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                    illo.</p>
-            </div>
+            <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
+                voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                illo.</p>
         </details>
 
         <details>
             <summary>Myself & Others</summary>
-            <div class="faq__content">
-                <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                    illo.</p>
-            </div>
+            <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
+                voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                illo.</p>
         </details>
 
         <details>
             <summary>On </summary>
-            <div class="faq__content">
-                <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                    illo.</p>
-            </div>
+            <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
+                voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                illo.</p>
         </details>
 
         <details>
             <summary>Hobbies & Interests</summary>
-            <div class="faq__content">
-                <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                    illo.</p>
-            </div>
+            <p>Fugiat quo voluptas nulla pariatur? Et iusto odio dignissimos ducimus qui blanditiis praesentium
+                voluptatum deleniti atque. Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                illo.</p>
         </details>
     </main>
 
